--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,8 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script>
+    localStorage.setItem("token",111);
+  </script>
 </body>
 </html>
